--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -1,13 +1,26 @@
 {% extends "base.html" %}
 
 {% block head %}
+
+<style>
+    .jumbotron {
+        height: 350px;
+    }
+</style>
+
 {% endblock %}
 
 {% block content %}
 
-<div class="container">
-    <div class="col-12">
-        <h2> Honours Emotional Recognition Application </h2>
+<div class="flex-container">
+    <div class="row">
+        <div class="col-12">
+            <div class="p-5 text-center bg-light">
+                <h1 class="mb-3">Emotional Recognition Honours Application </h1>
+                <h4 class="mb-3"> Student: Gary Smith (S181972) </h4>
+                <h4 class="mb-3"> Supervisor: Huaglory Tianfield </h4>
+            </div>
+        </div>
     </div>
 </div>
 
