--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,9 @@
 
     <!-- Imported CSS -->
 
+    <!-- Project Stylesheet -->
+    <link rel="stylsheet" href="{{ url_for('static', filename='css/stylesheet.css') }}">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -32,6 +35,12 @@
     <!-- Chart.js JS -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+    <!-- Popper.js (bootstrap dependency) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" 
+    crossorigin="anonymous"></script>
+
+
     <title>{% block title %} Honours Project Application {% endblock %}</title>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 
@@ -45,7 +54,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="/">Emotional Recognition Honours Project</a>
+        <a class="navbar-brand ms-4" href="/" >Emotional Recognition Honours Project</a>
         <div class="collapse navbar-collapse" id="navbar">
             {% if current_user.is_authenticated and current_user.type == "patient" %}
             <div class="navbar-nav">
