--- a/app/templates/therapy/therapy_results.html
+++ b/app/templates/therapy/therapy_results.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="row">
+    <div class="row mt-3">
         <div class="col-6 ">
             <div class="card">
                 <div class="card-header">
