Further work on user dashboards, styling, refactored models a bit as well to accomadate a person session therapist

--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -2,17 +2,11 @@
 
 {% block head %}
 
-<style>
-    .jumbotron {
-        height: 350px;
-    }
-</style>
-
 {% endblock %}
 
 {% block content %}
 
-<div class="flex-container">
+<div class="flex-container" style="overflow: hidden;">
     <div class="row">
         <div class="col-12">
             <div class="p-5 text-center bg-light">
