--- a/app/templates/patient_user/previous_gad.html
+++ b/app/templates/patient_user/previous_gad.html
@@ -11,3 +11,16 @@
 </div>
 
 {% endblock %}
+
+{% block scripts %}
+
+<script src="{{ url_for('static', filename='js/visualisations/line_graph.js') }}"></script>
+
+<script>
+    var ctx = document.getElementById('line_graph_canvas').getContext('2d');
+    var emotion_data = {{ most_recent_session_emotions | tojson }};
+
+    (ctx, emotion_data);
+</script>
+
+{% endblock %}
