--- a/app/templates/therapy/therapy_results.html
+++ b/app/templates/therapy/therapy_results.html
@@ -24,12 +24,45 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
         <div class="col-6">
             <div class="card">
                 <div class="card-body">
                     <h2>helloworld</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3> card 1</h3>
+                </div>
+                <div class="card-body">
+                    <p> Card 1 sample text </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3> Card 2 </h3>
+                </div>
+                <div class="card-body">
+                    <p>Card 2 sample text</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3> Card 3 </h3>
+                </div>
+                <div class="card-body">
+                    <p> Card 3 sample text </p>
                 </div>
             </div>
         </div>
