--- a/app/templates/therapy/therapy_screen.html
+++ b/app/templates/therapy/therapy_screen.html
@@ -38,8 +38,8 @@
                         Select Session Length
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Option1</a></li>
-                        <li><a class="dropdown-item" href="#">Option</a></li>
+                        <li><a class="dropdown-item" href="#">30 Minutes</a></li>
+                        <li><a class="dropdown-item" href="#">60 Minutes</a></li>
                     </ul>
                 </div>
             </div>
