Further work. Fixed chart issue, started to look into unit testing, etc.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -58,7 +58,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="/" >Emotional Recognition Honours Project</a>
+        <a class="navbar-brand ms-2" href="/">Emotional Recognition Honours Project</a>
         <div class="collapse navbar-collapse" id="navbar">
             {% if current_user.is_authenticated and current_user.type == "patient" %}
             <div class="navbar-nav">
