--- a/app/templates/patient_user/previous_phq.html
+++ b/app/templates/patient_user/previous_phq.html
@@ -12,10 +12,10 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-6">
-                            <p> Score Info </p>
+                            <h5> Questionnaire Score Info </h5>
                         </div>
                         <div class="col-6">
-                            <p> Emotional State Info </p>
+                            <h5> Emotional State Info </h5>
                         </div>
                     </div>
                 </div>
@@ -37,6 +37,9 @@
             <div class="card">
                 <div class="card-header">
                     <h3> Previous Attempts/Score Information </h3>
+                </div>
+                <div class="card-body">
+                    <h1> Placeholder </h1>
                 </div>
             </div>
         </div>
@@ -60,15 +63,15 @@
 <script src="{{ url_for('static', filename='js/visualisations/line_graph.js') }}"></script>
 
 <script>
-    //var graph_labels = {{ graph_labels | tojson }};
+    var graph_labels = {{ graph_labels | tojson }};
 
     var score_ctx = document.getElementById('score_graph_canvas').getContext('2d');
-    //var score_data = {{ score_data  | tojson }};
-    createLineGraph(score_ctx, graph_labels, score_data);
+    var score_data = {{ score_data  | tojson }};
+    createScoreGraph(score_ctx, graph_labels, score_data);
 
     var emotional_state_ctx = document.getElementById('emotional_state_graph_canvas');
-    //var emotional_state_data = {{ emotional_state_data | tojson }};
-    createLineGraph(emotional_state_ctx, graph_labels, emotional_state_data);
+    var emotional_state_data = {{ emotional_state_data | tojson }};
+    createEmotionalStateGraph(emotional_state_ctx, graph_labels, emotional_state_data);
 
 </script>
 
