--- a/app/templates/questionnaires/PHQ9.html
+++ b/app/templates/questionnaires/PHQ9.html
@@ -56,7 +56,7 @@
                 <div class="question" id="question1">
                     <label for="{{ form.question1.id }}">{{ form.question1.label}}</label>
                     <div class="radio-wrapper">
-                        {{ form.question1 (name='question1', class="btn btn-secondary mr-5") }}
+                        {{ form.question1 (name='question1', class="btn btn-secondary") }}
                     </div>
                 </div>
 
